2014-06-20  Yusuke Suzuki  <utatane.tea@gmail.com>

        Unreviewed. Adding myself to committers.

        * Scripts/webkitpy/common/config/contributors.json:

2014-06-20  Tim Horton  <timothy_horton@apple.com>

        Make WebKit2 more accessible in MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=134099

        Reviewed by Anders Carlsson.

        * MiniBrowser/mac/AppDelegate.h:
        * MiniBrowser/mac/AppDelegate.m:
        (-[BrowserAppDelegate newWindow:]):
        (-[BrowserAppDelegate applicationDidFinishLaunching:]):
        (-[BrowserAppDelegate toggleUseWebKit2ByDefault:]):
        (-[BrowserAppDelegate _useWebKit2ByDefault]):
        (-[BrowserAppDelegate _updateNewWindowKeyEquivalents]):
        (-[BrowserAppDelegate validateMenuItem:]):
        * MiniBrowser/mac/MainMenu.xib:
        Add a "Use WebKit2 By Default" menu item to the top of the Debug menu.
        When switched on, Cmd-N will make WebKit2 windows (and the default window will be WebKit2).
        Make the non-default new-window menu item always show up, because people often don't find it
        when you have to press option to have it show up.

        * MiniBrowser/mac/BrowserWindowController.h:
        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController initWithWindow:]):
        
        * MiniBrowser/mac/WK1BrowserWindowController.m:
        (-[WK1BrowserWindowController validateMenuItem:]):
        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController validateMenuItem:]):
        Use the cached [menuItem action] like the earlier cases do.

2014-06-20  Daniel Bates  <dabates@apple.com>

        Teach run-{safari, webkit-app} about iOS Simulator
        https://bugs.webkit.org/show_bug.cgi?id=133986

        Reviewed by David Kilzer.

        Extract the logic from old-run-webkit-tests to install and launch {DumpRenderTree, WebKitTestRunnerApp}.app