@@ -1,3 +1,9 @@
+2014-06-20  Javier Fernandez  <jfernandez@igalia.com>
+
+        Unreviewed. Adding myself to committers.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2014-06-20  Yusuke Suzuki  <utatane.tea@gmail.com>
 
         Unreviewed. Adding myself to committers.
